--- a/TicTacToe/app/build.gradle
+++ b/TicTacToe/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.crowdfire.cfalertdialog:cfalertdialog:1.1.0'
+
 
 }
