--- a/TicTacToe/app/build.gradle
+++ b/TicTacToe/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.crowdfire.cfalertdialog:cfalertdialog:1.1.0'
+    implementation 'nl.dionsegijn:konfetti:1.1.2'
+
 
 
 }
